--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    width: 100vh;
+    width: 100vw;
     height: 100vh;
     margin: 0;
     padding: 0;
@@ -19,6 +19,10 @@ header{
     height: 15vh;
     background-color: blueviolet;
     right: 0;
+}
+
+.hidden{
+    display: none;
 }
 
 #view-score{
@@ -37,18 +41,114 @@ header{
     font-size: larger;
 }
 
-main{
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    width: 100vh;
-    height: 100vh;
-}
-
 #start-screen h1, #start-screen p, #start-screen ul {
     display: flex;
-    justify-content: center;
+    justify-content: center; 
     flex-flow: column wrap;
     width: 100%;
     text-align: center;
+}
+
+#start-button-section{
+    display: flex;
+    justify-content: center; 
+}
+
+#start-button{
+    padding: 3px;
+    width: 15%;
+    font-size: larger;
+    background-color: cadetblue;
+}
+
+#questions {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+}
+
+.question-buttons button{
+    background-color: cornflowerblue;
+    border: 3px solid black;
+    border-radius: 3px;
+    cursor: pointer;
+    flex-flow: column wrap;
+    width: 50%;
+    margin: 10px;
+    font-size: larger;
+}
+
+#game-over{
+    display: flex;
+    justify-content: center;
+}
+
+#wrong-or-correct{
+    display: flex;
+    max-width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#correct{
+    background-color: darkgreen;
+    box-shadow: 0 0 10px;
+    border-radius: 2px;
+    padding: 25px 30px;
+}
+
+#wrong{
+    background-color: darkred;
+    box-shadow: 0 0 10px;
+    border-radius: 2px;
+    padding: 25px 30px;
+}
+
+#hiscores h2{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+#user-score-board{
+    display: flex;
+    width: 100%;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+
+#score-initials, #score-points{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-flow: column wrap;
+}
+
+#score-points{
+    list-style-type: none;
+}
+
+#score-area-retake {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+@media screen and (max-width: 768px){
+    header{
+        text-align: center;
+        flex-flow: column wrap;
+        justify-content: flex-start;
+    }
+
+    #start-button{
+        width: auto;
+    }
+
+    .section-buttons button{
+        width: auto;
+    }
 }
