--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ header{
     color: black;
     text-decoration: none;
     cursor: pointer;
-    font-size: larger;
+    font-size: 3em;
 }
 
 #timer{
@@ -38,7 +38,7 @@ header{
     margin-left: auto;
     margin-right: 40px;
     display: inline-flex;
-    font-size: larger;
+    font-size: 3em;
 }
 
 #start-screen h1, #start-screen p, #start-screen ul {
